allows getting and setting pre_tokenizers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,6 @@ S3method("$",REncoding)
 export(REncoding)
 export(make_wrappers)
 export(models_bpe)
-export(tokenizer)
+export(pre_tokenizers_whitespace)
 export(trainers_bpe)
 useDynLib(hftokenizers, .registration = TRUE)
