--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ RoxygenNote: 7.1.1
 Suggests:
     rmarkdown,
     testthat,
-    knitr
+    knitr,
+    pins
 Imports: 
     R6
 VignetteBuilder: knitr
