--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(REncoding)
 export(make_wrappers)
 export(models_bpe)
 export(pre_tokenizers_whitespace)
+export(tokenizer)
 export(trainers_bpe)
 useDynLib(hftokenizers, .registration = TRUE)
