--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["staticlib"]
 [dependencies]
 extendr-api = "0.1.11"
 tokenizers = {git = "https://github.com/huggingface/tokenizers"}
+serde = { version = "1.0", features = [ "rc", "derive" ]}
 
 # Once extendr 0.1.11 is on crates.io the entire remaining part
 # of this file can be deleted.
