allows setting post processors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,15 @@ S3method("$",RModelsBpe)
 S3method("$",RNormalizer)
 S3method("$",RPostProcessor)
 S3method("$",RPreTokenizer)
+S3method("$",RSpecialToken)
+S3method("$",RTemplateProcessing)
 S3method("$",RTokenizer)
 S3method("$",RWhitespace)
+S3method("$",VecRSpecialToken)
 export(REncoding)
 export(make_wrappers)
 export(models_bpe)
+export(post_processors_template_processing)
 export(pre_tokenizers_whitespace)
 export(tokenizer)
 export(trainers_bpe)
