--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -9,7 +9,8 @@ crate-type = ["staticlib"]
 
 [dependencies]
 extendr-api = "0.2.0"
-tokenizers = {git = "https://github.com/huggingface/tokenizers"}
+# use a pre-"TruncationDirection" in encoding.rs commit
+tokenizers = {git = "https://github.com/huggingface/tokenizers", rev = "256a71c"}
 serde = { version = "1.0", features = [ "rc", "derive" ]}
 
 # Once extendr 0.1.11 is on crates.io the entire remaining part
